--- a/blog-ebfe-dk/blog/_posts/2017-04-10-asis2017-crc.md
+++ b/blog-ebfe-dk/blog/_posts/2017-04-10-asis2017-crc.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: ASIS 2017 Quals CRC
-comments: false
+comments: true
 category: ctf
 tags: ctf, asis2017, pwnable, dynelf, leak, crc32
 ---
