--- a/blog-ebfe-dk/blog/_posts/2017-04-10-asis2017-random.md
+++ b/blog-ebfe-dk/blog/_posts/2017-04-10-asis2017-random.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: ASIS 2017 Quals Random
-comments: false
+comments: true
 category: ctf
 tags: ctf, asis 2017, pwnable, rop
 ---
